--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,5 @@
-site_name: MkLorum
-# site_url: https://huang-jiahong1024.github.io/
+# [Info]
+site_name: 个人网站 # 左上角标题
+site_url: https://huang-jiahong1024.github.io/
+site_author: 家鸿
+site_description: 家鸿的个人网站
