--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ extra:
   social: # icons
     # - icon: fontawesome/brands/bilibili
     #   link: https://space.bilibili.com/<uid>
-      # name: Bilibili | <username> # 鼠标悬浮提示
+    # name: Bilibili | <username> # 鼠标悬浮提示
     - icon: fontawesome/brands/github
       link: https://github.com/wongkahome
       name: GitHub | wongkahome
@@ -78,7 +78,8 @@ markdown_extensions:
   - attr_list # 给图片后面添加{width="300"}设置大小
   - toc:
       permalink: true # 固定标题位置为当前位置
-  - pymdownx.highlight:# 代码块高亮
+  - pymdownx.highlight: # 代码块高亮
+      anchor_linenums: true
       # linenums: true # 显示行号
       # auto_title: true # 显示编程语言名称
   - pymdownx.superfences # 代码块高亮插件
