--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,9 @@ nav:
       - ME/index.md
   - 网站:
       - WEBSITE/index.md
+      - WEBSITE/build.md
+      - WEBSITE/about.md
+      - WEBSITE/help.md
 
 # [UI]
 ## [top]
