--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,10 +12,15 @@ nav:
       - DEV/index.md
   - 随笔:
       - ESSAY/index.md
+      - 阅读:
+      - ESSAY/Reading/《人间失格》.md
+      - ESSAY/Reading/《心》.md
   - 转载:
       - REPRODUCE/index.md
   - 我的:
       - ME/index.md
+      - ME/补番.md
+      - ME/网站.md
   - 网站:
       - WEBSITE/index.md
       - WEBSITE/build.md
