--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,10 +17,10 @@ nav:
         - ESSAY/Reading/Kokoro.md
   - 转载:
       - REPRODUCE/index.md
+      - REPRODUCE/web.md
+      - REPRODUCE/anime.md
   - 我的:
       - ME/index.md
-      - ME/web.md
-      - ME/anime.md
   - 网站:
       - WEBSITE/index.md
       - WEBSITE/build.md
