--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ site_description: wongkahome的个人网站
 nav:
   - 博客:
       - BLOG/index.md
+      - BLOG/Git.md
   - 开发:
       - DEV/index.md
   - 随笔:
@@ -83,6 +84,9 @@ markdown_extensions:
   - pymdownx.arithmatex: # latex支持
       generic: true
   - attr_list # 给图片后面添加{width="300"}设置大小
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - toc:
       permalink: true # 固定标题位置为当前位置
   - pymdownx.highlight: # 代码块高亮
